fix gameboard alignment issue

--- a/src/css/base.styl
+++ b/src/css/base.styl
@@ -1203,6 +1203,9 @@ nav ul
           .content
             transform(rotate(0))
 
+          .content.center
+            left: 13px
+
       .card-wrapper
         margin-right: 10px
         margin-bottom: 5px
